--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,19 @@
   z-index: -1; 
 }
 
+.mars {
+  background-image: url('../public/assets/destination/background-destination-desktop.jpg');
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed; 
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; 
+}
+
 
 /* :root {
   --foreground-rgb: 0, 0, 0;
