--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,6 +40,18 @@
   z-index: -1; 
 }
 
+.crew {
+  background-image: url('../public/assets/crew/background-crew-desktop.jpg');
+  background-size: cover;
+  background-position: center center;
+  background-attachment: scroll;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; 
+}
 
 /* :root {
   --foreground-rgb: 0, 0, 0;
