--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,7 @@
   background-size: cover;
   background-position: center center;
   background-attachment: scroll; 
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
